mcp/excalidraw/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-mcp
  namespace: agentgateway-system
  labels:
    example: exc-mcp-route
spec:
  parentRefs:
  - name: exc-agentgateway-proxy
    namespace: agentgateway-system
    sectionName: exc-mcp-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp-excalidraw
    backendRefs:
    - name: excalidraw-mcp
      group: agentgateway.dev
      kind: AgentgatewayBackend
